# pi-pico-dual-ethernet

./: .gitignore  README.md
cad/: case.scad
demo-firmware/: Cargo.toml
demo-firmware/src/: buttons.rs  display.rs  main.rs  network.rs
pcb/: fp-lib-table  pi-pico-dual-ethernet.kicad_pro  pi-pico-dual-ethernet.kicad_sch  sym-lib-table
pcb/lib/Modules/: Modules.kicad_sym
