[package]
name = "pi-pico-dual-ethernet-demo"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[[bin]]
name = "pi-pico-dual-ethernet-demo"
bench = false
test = false

[features]
test-panic-on-core-0 = []

[dependencies]
assign-resources = "0.5.0"
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.8.0", features = ["defmt", "dhcpv4", "dns", "proto-ipv4", "tcp", "udp"] }
embassy-net-wiznet = "0.2.1"
embassy-rp = { version = "0.9.0", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = "0.7.0"
embassy-time = "0.5.0"
embedded-io-async = "0.7.0"
heapless = { version = "0.9.2", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.13.0", features = ["critical-section"] }
static_cell = "2.1.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
